--- a/projects/web/src/app/admin/audit-logs/list/list.component.html
+++ b/projects/web/src/app/admin/audit-logs/list/list.component.html
@@ -35,7 +35,7 @@
               </nz-input-group>
               <nz-button-group *nzSpaceItem>
                 <button type="button" nz-button nzType="default"
-                  (click)="this.vm.search()">
+                  (click)="loadData({})">
                   <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
                 </button>
               </nz-button-group>
