--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -16,7 +16,7 @@
               <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建菜单项
             </button>
             <button type="button" nz-button nzType="default"
-              (click)="vm.search()">
+              (click)="loadData({})">
               <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
           </nz-button-group>
