--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -28,7 +28,7 @@
                 <input name="userName" type="text" nz-input
                   placeholder="按用户名搜索"
                   [(ngModel)]="vm.searchModel.userName"
-                  (keyup.enter)="vm.search()"
+                  (keyup.enter)="loadData({})"
                 />
                 <ng-template #userNameAddOnTpl>
                   <button *ngIf="vm.searchModel.userName"
@@ -50,7 +50,7 @@
                 </nz-option>
               </nz-select>
               <nz-select *nzSpaceItem name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
-                (ngModelChange)="vm.search()">
+                (ngModelChange)="loadData({})">
                 <nz-option *ngFor="let sm of vm.sortMethods"
                   [nzValue]="sm.value" [nzLabel]="sm.text">
                 </nz-option>
@@ -61,7 +61,7 @@
                   (click)="showDetail('0', true)">
                   <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建用户
                 </button>
-                <button type="button" nz-button nzType="default" (click)="vm.search()">
+                <button type="button" nz-button nzType="default" (click)="loadData({})">
                   <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
                 </button>
               </nz-button-group>
