login page error alert style

--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -35,7 +35,7 @@
             </button>
           </nz-form-item>
           @if (message | async; as msg) {
-            <nz-alert nzType="error"
+            <nz-alert class="login-error-alert" nzType="error"
               [nzCloseable]="true" (nzOnClose)="clearMessage()"
               [nzShowIcon]="true"
               [nzMessage]="msg">
