--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 @if (navigation.initialized) {
   <app-nav-topbar></app-nav-topbar>
 }
@@ -9,3 +10,14 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+-->
+<nz-layout class="app-main">
+  <nz-sider [nzTheme]="theme" nzCollapsible [(nzCollapsed)]="collapsed" [nzWidth]="220">
+    <app-nav-sidebar-antd [collapsed]="collapsed"></app-nav-sidebar-antd>
+  </nz-sider>
+  <nz-layout>
+    <nz-content class="router-main flex-grow-1">
+      <router-outlet></router-outlet>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
