--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -15,40 +15,49 @@
       <ng-container *ngTemplateOutlet="menuTpl; context: { $implicit: { menus: root.children, level: 1 }}">
       </ng-container>
       <ng-template #menuTpl let-data>
-        <ng-container *ngFor="let menu of data.menus">
-          <li *ngIf="!menu.children && !menu.isHidden"
-            nz-menu-item nzMatchRouter
-            [nzPaddingLeft]="collapsed && data.level > 1 ? 0 : data.level * 32"
-            [nzSelected]="menu.url && router.url.startsWith(menu.url)"
-            [class.ant-menu-item-selected]="menu.url && router.url.startsWith(menu.url)"
-            (click)="goTo(menu.url)">
-            <span title class="d-inline-flex align-items-center"
-              nzTooltipPlacement="right"
-              nz-tooltip [nzTooltipTitle]="data.title">
-              <span *ngIf="data.level === 1" nz-icon>
-                <svg-icon *ngIf="menu.icon" [iconPath]="menu.icon || 'bi/question-circle'"></svg-icon>
-              </span>
-              <span>{{ menu.title }}</span>
-            </span>
-          </li>
-          <li *ngIf="menu.children && !menu.isHidden"
-            nz-submenu [nzTitle]="subTitleTpl"
-            [nzPaddingLeft]="collapsed && data.level > 1 ? 0 : data.level * 32"
-            [nzOpen]="menu.url && router.url.startsWith(menu.url + '/')">
-            <ng-template #subTitleTpl>
-              <span title class="d-inline-flex align-items-center" [class.text-white]="router.url.startsWith(menu.url + '/')">
-                <span *ngIf="data.level === 1" nz-icon>
-                  <svg-icon *ngIf="menu.icon" [iconPath]="menu.icon || 'question-circle'"></svg-icon>
+        @for (menu of data.menus; track menu.id) {
+          @if (!menu.isHidden) {
+            @if (menu.children) {
+              <li nz-submenu [nzTitle]="subTitleTpl"
+                [nzPaddingLeft]="collapsed && data.level > 1 ? 0 : data.level * 32"
+                [nzOpen]="menu.url && router.url.startsWith(menu.url + '/')">
+                <ng-template #subTitleTpl>
+                  <span title
+                    class="d-inline-flex align-items-center"
+                    [class.text-white]="router.url.startsWith(menu.url + '/')">
+                    @if (data.level === 1) {
+                      <span nz-icon>
+                        <svg-icon [iconPath]="menu.icon || 'question-circle'"></svg-icon>
+                      </span>
+                    }
+                    <span>{{ menu.title }}</span>
+                  </span>
+                </ng-template>
+                <ul>
+                  <ng-container *ngTemplateOutlet="menuTpl; context: { $implicit: { menus: menu.children, level: data.level + 1 } }">
+                  </ng-container>
+                </ul>
+              </li>
+            } @else {
+              <li nz-menu-item nzMatchRouter
+                [nzPaddingLeft]="collapsed && data.level > 1 ? 0 : data.level * 32"
+                [nzSelected]="menu.url && router.url.startsWith(menu.url)"
+                [class.ant-menu-item-selected]="menu.url && router.url.startsWith(menu.url)"
+                (click)="goTo(menu.url)">
+                <span title
+                  class="d-inline-flex align-items-center"
+                  nz-tooltip nzTooltipPlacement="right" [nzTooltipTitle]="data.title">
+                  @if (data.level === 1) {
+                    <span nz-icon>
+                      <svg-icon [iconPath]="menu.icon || 'bi/question-circle'"></svg-icon>
+                    </span>
+                  }
+                  <span>{{ menu.title }}</span>
                 </span>
-                <span>{{ menu.title }}</span>
-              </span>
-            </ng-template>
-            <ul>
-              <ng-container *ngTemplateOutlet="menuTpl; context: { $implicit: { menus: menu.children, level: data.level + 1 } }">
-              </ng-container>
-            </ul>
-          </li>
-        </ng-container>
+              </li>
+            }
+          }
+        }
       </ng-template>
     </ul>
   }
