--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -18,7 +18,7 @@
               <input nz-input nzSize="large" type="password" name="password"
                 placeholder="请输入密码 ..." required id="password"
                 [(ngModel)]="model.password"
-                autocomplete="current-password"
+                autocomplete="new-password"
                 (keyup)="passwordKeyUp($event, loginForm)"
               />
             </nz-form-control>
