--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
@@ -5,18 +5,18 @@
 }
 
 .logo {
-  background: var(--ant-primary-color);
-  height: 7.5rem;
+  /* height: 6.5rem;
+  background-color: var(--ant-primary-7); */
 }
 
 .logo-icon {
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-  transition: padding .3s;
+  padding: 0.5rem 0.25rem 0.5rem 0.5rem;
+  transition: all .3s;
 }
 
-.logo-icon.collapsed {
+/* .logo-icon.collapsed {
   padding: 2rem 0.5rem 1.5rem 0.5rem;
-}
+} */
 
 .logo-title {
 	opacity: 0;
@@ -24,7 +24,7 @@
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
 	animation-delay: .3s;
-  animation-duration: .3s;
+  animation-duration: .2s;
   animation-fill-mode: both;
 }
 
@@ -50,10 +50,10 @@
 .side-menu::-webkit-scrollbar-thumb:vertical {
   height: 0.25rem;
   border-radius: 0.25rem;
-  background-color: var(--ant-primary-7);
+  background-color: rgba(128, 128, 128, .4);
 }
 .side-menu::-webkit-scrollbar-thumb:horizontal {
   width: 0.25rem;
   border-radius: 0.25rem;
-  background-color: var(--ant-primary-7);
+  background-color: rgba(128, 128, 128, .4);
 }
