--- a/projects/web/src/app/app.component.css
+++ b/projects/web/src/app/app.component.css
@@ -1,7 +1,3 @@
-:host {
-  /* background-color: #ccc; */
-}
-
 .app-main {
   width: 100%;
   height: 100%;
@@ -18,21 +14,9 @@
   z-index: 9999;
 }
 
-.trigger {
-  font-size: 18px;
-  line-height: 64px;
-  padding: 0 24px;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-.trigger:hover {
-  color: #1890ff;
-}
-
-
-.inner-content {
-  padding: 24px;
-  background: #fff;
-  min-height: 360px;
+.layout-header {
+  background-color: white;
+  padding: 0;
+  height: 48px;
+  line-height: 48px;
 }
