--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -1,23 +1,19 @@
-<!--
-@if (navigation.initialized) {
-  <app-nav-topbar></app-nav-topbar>
-}
-<div class="app-main d-flex">
-  @if (navigation.showSidebar) {
-    <app-nav-sidebar *ngIf="navigation.showSidebar"></app-nav-sidebar>
-  }
-  <div class="router-main flex-grow-1">
-    <router-outlet></router-outlet>
-  </div>
-</div>
--->
 <nz-layout class="app-main">
-  @if (ui.showSidebar) {
-    <nz-sider [nzTheme]="theme" nzCollapsible [(nzCollapsed)]="collapsed" [nzWidth]="220">
-      <app-nav-sidebar-antd [collapsed]="collapsed" [theme]="theme"></app-nav-sidebar-antd>
+  @if (ui.showSider) {
+    <nz-sider [nzTheme]="ui.siderTheme" [nzWidth]="220"
+      nzCollapsible [(nzCollapsed)]="ui.siderCollapsed"
+      [nzTrigger]="null">
+      <app-nav-sidebar-antd [collapsed]="ui.siderCollapsed"
+        [theme]="ui.siderTheme">
+      </app-nav-sidebar-antd>
     </nz-sider>
   }
   <nz-layout>
+    @if (ui.showHeader) {
+      <nz-header class="layout-header mb-3">
+        <app-header></app-header>
+      </nz-header>
+    }
     <nz-content class="router-main flex-grow-1">
       <router-outlet></router-outlet>
     </nz-content>
