--- a/projects/web/src/app/account/token-list/token-list.component.html
+++ b/projects/web/src/app/account/token-list/token-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container">
   <div class="row g-0">
     <nz-card class="ant-card-data-list" nzTitle="我的凭证" [nzExtra]="cardExtra">
       <ng-template #cardExtra>
