--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
@@ -5,21 +5,20 @@
 }
 
 .logo {
-  /* height: 6.5rem;
-  background-color: var(--ant-primary-7); */
+  height: 72px;
+  padding: 16px 16px;
 }
 
 .logo-icon {
-  padding: 0.5rem 0.25rem 0.5rem 0.5rem;
-  transition: all .3s;
+  padding: 8px 4px 8px 12px;
+  line-height: 36px;
+  width: 36px;
+  height: 36px;
 }
-
-/* .logo-icon.collapsed {
-  padding: 2rem 0.5rem 1.5rem 0.5rem;
-} */
 
 .logo-title {
 	opacity: 0;
+  height: 36px;
 	animation-name: fadeInOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
