--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -1,13 +1,13 @@
 @if (vm.root | async; as root) {
   @if (root.title) {
-    <div class="d-flex align-items-center justify-content-center p-3"
+    <div class="logo"
       [class.text-white]="theme === 'dark'"
       [class.text-black]="theme === 'light'">
-      <div class="logo-icon" [class.collapsed]="collapsed">
+      <span class="logo-icon">
         <svg-icon iconClass="bi bi-xxl" [iconPath]="root.icon"></svg-icon>
-      </div>
-        <div class="logo-title ps-2 fs-5 text-nowrap text-truncate"
-          [class.d-none]="collapsed">{{root.title}}</div>
+      </span>
+      <span class="logo-title ps-2 fs-5 text-nowrap text-truncate"
+        [class.d-none]="collapsed">{{root.title}}</span>
     </div>
   }
   @if (root.children?.length) {
