--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -6,7 +6,7 @@
       <span class="logo-icon">
         <svg-icon iconClass="bi bi-xxl" [iconPath]="root.icon"></svg-icon>
       </span>
-      <span class="logo-title ps-2 fs-5 text-nowrap text-truncate"
+      <span class="logo-title user-select-none ps-2 fs-5 text-nowrap text-truncate"
         [class.d-none]="collapsed">{{root.title}}</span>
     </div>
   }
