--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -45,7 +45,8 @@
                 (click)="goTo(menu.url)">
                 <span title
                   class="d-inline-flex align-items-center"
-                  nz-tooltip nzTooltipPlacement="right" [nzTooltipTitle]="data.title">
+                  nz-tooltip nzTooltipPlacement="right" [nzTooltipArrowPointAtCenter]="true"
+                  [nzTooltipTitle]="(collapsed && data.level === 1) ? menu.title : null">
                   @if (data.level === 1) {
                     <span nz-icon>
                       <svg-icon [iconPath]="menu.icon || 'bi/question-circle'"></svg-icon>
