boot handset with standalone

--- a/projects/handset/src/app/nav-menu/nav-menu.component.html
+++ b/projects/handset/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <mat-list>
   <mat-list-item>
-    <img mat-list-avatar src="./assets/user.png" />
+    <img mat-list-avatar src="./assets/user.png" alt="User" />
     <span mat-line [matMenuTriggerFor]="userMenu">{{(accountSvc.info | async)?.userName}}</span>
     <button mat-icon-button (click)="toggleDrawer()">
       <mat-icon>chevron_left</mat-icon>
