--- a/projects/web/src/app/common/storage-browser/storage-browser.component.html
+++ b/projects/web/src/app/common/storage-browser/storage-browser.component.html
@@ -26,7 +26,7 @@
           <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 确定
         </button>
         <button type="button" nz-button nzType="default"
-          (click)="modal.close('cancel')">
+          (click)="cancel()">
           <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
         </button>
       </nz-button-group>
@@ -36,7 +36,6 @@
     <div class="rounded p-4 m-2 folder-item text-center d-inline-block border"
       *cdkVirtualFor="let item of filteredItems"
       [ngClass]="{ 'border-primary': item.name === selectedItem?.name }"
-
       [nz-tooltip]="item.name"
       (dblclick)="getFolderContent(item)" (click)="setSelectedItem(item)">
       <div [class]="getFolderItemClass(item)">
