--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -8,16 +8,16 @@
     </nz-button-group>
   </ng-template>
   <form nz-form nzLayout="vertical" #privilegeForm="ngForm">
-    <nz-form-item *ngFor="let mp of vm.privileges">
-      <h6>{{mp.module}}</h6>
-      <div>
+    <nz-form-item *ngFor="let mp of vm.privileges" class="mb-2 p-0">
+      <nz-form-label class="fs-6 fw-bolder">{{mp.module}}</nz-form-label>
+      <nz-form-control>
         <label *ngFor="let p of mp.privileges" class="m-0"
           [for]="p.id" nz-checkbox [nzValue]="p.name"
           [nzChecked]="vm.rolePrivileges[p.name]"
           (nzCheckedChange)="togglePrivilege(p.name)">
           {{p.description || p.name}}
         </label>
-      </div>
+      </nz-form-control>
     </nz-form-item>
   </form>
 </nz-card>
